logs/dag_id=rand_user/run_id=manual__2023-11-23T07:12:53.622090+00:00/task_id=upload_data_to_destination/attempt=1.log
[2023-11-23T07:13:05.608+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.upload_data_to_destination manual__2023-11-23T07:12:53.622090+00:00 [queued]>
[2023-11-23T07:13:05.620+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.upload_data_to_destination manual__2023-11-23T07:12:53.622090+00:00 [queued]>
[2023-11-23T07:13:05.620+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-23T07:13:05.621+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 3
[2023-11-23T07:13:05.621+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-23T07:13:05.637+0000] {taskinstance.py:1383} INFO - Executing <Task(GenericTransfer): upload_data_to_destination> on 2023-11-23 07:12:53.622090+00:00
[2023-11-23T07:13:05.643+0000] {standard_task_runner.py:55} INFO - Started process 9472 to run task
[2023-11-23T07:13:05.647+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'upload_data_to_destination', 'manual__2023-11-23T07:12:53.622090+00:00', '--job-id', '625', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmpc9_ib7ka']
[2023-11-23T07:13:05.649+0000] {standard_task_runner.py:83} INFO - Job 625: Subtask upload_data_to_destination
[2023-11-23T07:13:05.718+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.upload_data_to_destination manual__2023-11-23T07:12:53.622090+00:00 [running]> on host f71f95879a41
[2023-11-23T07:13:05.794+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=upload_data_to_destination
AIRFLOW_CTX_EXECUTION_DATE=2023-11-23T07:12:53.622090+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-23T07:12:53.622090+00:00
[2023-11-23T07:13:05.805+0000] {base.py:71} INFO - Using connection ID 'source_db_***' for task execution.
[2023-11-23T07:13:06.003+0000] {base.py:71} INFO - Using connection ID 'dest_conn_id' for task execution.
[2023-11-23T07:13:06.175+0000] {generic_transfer.py:76} INFO - Extracting data from source_db_***
[2023-11-23T07:13:06.176+0000] {generic_transfer.py:77} INFO - Executing: 
 SELECT * FROM rand_users
[2023-11-23T07:13:06.183+0000] {base.py:71} INFO - Using connection ID 'source_db_***' for task execution.
[2023-11-23T07:13:06.194+0000] {generic_transfer.py:104} INFO - Inserting rows into dest_conn_id
[2023-11-23T07:13:06.202+0000] {base.py:71} INFO - Using connection ID 'dest_conn_id' for task execution.
[2023-11-23T07:13:06.212+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/generic_transfer.py", line 105, in execute
    insert_rows(table=self.destination_table, rows=results, **self.insert_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 409, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ...ybug745','brewster','landon.bates@example.com',28,'2023-11-2...
                                                             ^

[2023-11-23T07:13:06.220+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=rand_user, task_id=upload_data_to_destination, execution_date=20231123T071253, start_date=20231123T071305, end_date=20231123T071306
[2023-11-23T07:13:06.234+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 625 for task upload_data_to_destination (INSERT has more expressions than target columns
LINE 1: ...ybug745','brewster','landon.bates@example.com',28,'2023-11-2...
                                                             ^
; 9472)
[2023-11-23T07:13:06.260+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-23T07:13:06.278+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
